--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div class="weatherContainer">
     <p class = "temperature"></p>
     <p class = "description"></p>
+    <p class="info"> <a href="info.html">click here for more info</a></p>
 </div>
 
 </body>
